manifests/ingress-e976.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "akskodey-e976"
    labels:
        app: "akskodey-e976"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: akskodeye976-akskodey-e976.cfa4f987fa1f4ceda371.westcentralus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "akskodey-e976"
                servicePort: 80
